- ?/??/????, MOSREF Remote REPL
  * Added string->integer to core prims
  * Added a platform architecture tag to the stubs
  * Disabled set-macro! generation by the compiler; imported macros can
    be determined by module source examination, now.
  * Modified decrypt-input to recognize eof conditions.
  * Added mosref/main, a command wrapper for MOSREF to establish a remote 
    repl / terminal.
  + Added support for dotted-quad addresses to MOSVM's address resolution.

- 3/20/2006, MOSREF Drone Exec / Repl Interface
  * Broke mosref functionality into mosref/drone and mosref/console
  * Added drone-exec, console-repl to mosref/console
  * Added drone-repl to mosref/drone

- 3/18/2006, Quantity Added to Read
  * Altered read-descr to accept an optional quantity argument.
  * Added the quantity field to mqo_descr
  * Altered mqo_read_data_mt to use the quantity field.
  * Altered all uses of port-read-fn to include quantity arguments.
  * Added mqo_flush_buffer and flush-buffer

- 3/18/2005, MOSREF Compose Module
  * Added (path-mtime path) -> integer to prims/os
  * Added (file-path? path) -> #t or #f
  * Added (path-join string ..) -> string to lib/core
  * Added (convert-path string) -> string to lib/core
  * Added (read-data-file path) -> string to lib/core
  * Modified read-lisp-file to use descrs instead of ports.
  * Fixed bug with make-tc causing optional arguments to be misread.
  * Fixed bug with open-file-descr causing create to append
  * Added t for Truncate to open-file-descr
  * Added (path-exists? path) -> #t or #f to prims/os
  * Added (member item list) -> #t or #f to prims/core
  * Added lib/build
  * Added (build-module module) -> string to lib/build
  * Added (build-dependencies module) to lib/build
  * Added (build-exe platform module) -> string to lib/build 
  * Fixed a bug in mqo_expand_buffer that caused a buffer not to expand.
  * Added (write-data-file path data) to lib/core

- 3/12/2006, MOSREF Control Module